--- a/admin.html
+++ b/admin.html
@@ -58,6 +58,92 @@
             <div class="bodyRight">
                 <div class="message" id="message">The category was added successfully</div>
                 <div class="bodyRightContainer">
+
+                    <div class="bdcDashBord bdc">
+
+                        <div class="MainContainer">
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfLessProducts">41</div>
+                                        <div class="totalText">Total Products less 10</div>
+                                    </div>
+
+                                    <div class="iconDashBord"><i class="fas fa-shopping-cart"></i></div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfProducts">41</div>
+                                        <div class="totalText">Total Products</div>
+                                    </div>
+
+                                    <div class="iconDashBord"><i class="fas fa-shopping-cart"></i></div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfCategory">41</div>
+                                        <div class="totalText">Total Category</div>
+                                    </div>
+
+                                    <div class="iconDashBord"><i class="fas fa-list"></i></div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfOrderShipped">41</div>
+                                        <div class="totalText">Total Order Shipped</div>
+                                    </div>
+
+                                    <div class="iconDashBord"> <i class="fas fa-paper-plane"></i></div>
+
+                                </div>
+
+                            </div>
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfOrderPending">41</div>
+                                        <div class="totalText">Total Order Pending</div>
+                                    </div>
+
+                                    <div class="iconDashBord"><i class="far fa-clock"></i></div>
+
+                                </div>
+
+                            </div>
+
+
+                            <div class="iconsContainer">
+                                <div class="rowContainer">
+                                    <div class="informationContainer">
+                                        <div class="numberOf" id="numberOfUserWantAdmin">41</div>
+                                        <div class="totalText">Total User want Admin</div>
+                                    </div>
+
+                                    <div class="iconDashBord"><i class="fas fa-user-cog"></i></div>
+
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="bdcCatAdd bdc">
                         <div class="addText" id="addText">Add Category</div>
                         <div class="inputContainer">
@@ -97,7 +183,7 @@
 
                                 <div class="row">
                                     <div class="label-left">Category Name</div>
-                                    <select name="CategoryName" id="CategoryName" tabindex="1">                                        
+                                    <select name="CategoryName" class="CategoryNameChoice" tabindex="1">                                        
                                     </select>
                                 </div>
 
@@ -159,7 +245,7 @@
 
 
                     <div class="bdcProDelUpp bdc">
-                        <div class="addText">Update/Delete Product</div>
+                        <div class="addText" id="updateDeleteProduct">Update/Delete Product</div>
                         <div class="columnContainer">
                             <div class="columnMain">
                                 <div class="columnMainText cmtProductID">ProdID</div>
@@ -222,23 +308,18 @@
 
                     <div class="bdcMangeAdminAdd bdc">
                         <div class="addText">Manege Admin</div>
-                        <div class="inputContainer">
-
-
-                        </div>
-                    </div>
-
-                    <div class="bdcMangeAdminDelUpp bdc">
-                        <div class="addText">#</div>
-                        <div class="inputContainer">
-
-
+                        <div class="columnContainer">
+                            <div class="columnMain">
+                                <div class="columnMainText UserID">UserID</div>
+                                <div class="columnMainText FirstName">FirstName</div>
+                                <div class="columnMainText LastName">LastName</div>
+                                <div class="columnMainText Email">Email</div>
+                                <div class="columnMainText Acrive">Acrive</div>
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
         </div>
     </main>
