--- a/admin.html
+++ b/admin.html
@@ -314,7 +314,7 @@
                                 <div class="columnMainText FirstName">FirstName</div>
                                 <div class="columnMainText LastName">LastName</div>
                                 <div class="columnMainText Email">Email</div>
-                                <div class="columnMainText Acrive">Acrive</div>
+                                <div class="columnMainText Role">Role</div>
                             </div>
                         </div>
                     </div>
